--- a/calendar/Ballerina.toml
+++ b/calendar/Ballerina.toml
@@ -1,7 +1,7 @@
 [package]
 org= "ballerinax"
 name= "microsoft.outlook.calendar"
-version= "1.0.1-SNAPSHOT"
+version= "1.0.1"
 authors = ["Ballerina"]
 keywords = ["microsoft", "outlook", "calendar", "management", "scheduling"]
 repository = "https://github.com/ballerina-platform/module-ballerinax-microsoft.outlook.calendar"
