--- a/calendar/Ballerina.toml
+++ b/calendar/Ballerina.toml
@@ -1,9 +1,9 @@
 [package]
 org= "ballerinax"
 name= "microsoft.outlook.calendar"
-version= "1.0.1-SNAPSHOT"
+version= "2.0.0"
 authors = ["Ballerina"]
-keywords = ["productivity/calendars", "cost/free", "vendor/microsoft"]
+keywords = ["Productivity/Calendars", "Cost/Free", "Vendor/Microsoft"]
 repository = "https://github.com/ballerina-platform/module-ballerinax-microsoft.outlook.calendar"
 license = ["Apache-2.0"]
 
